--- a/_posts/2015-05-13-전화번호-lib-활용.md
+++ b/_posts/2015-05-13-전화번호-lib-활용.md
@@ -14,7 +14,7 @@ tags: ["Java", "Android"]
 >(build.gradle)
 compile 'com.googlecode.libphonenumber:libphonenumber:7.0.5'
 
-{% hightlight java %}
+{% highlight java %}
 @Test
 public void test() throws NumberParseException {
     String phoneNumber = "010-2781-1234";
@@ -29,7 +29,7 @@ public void test() throws NumberParseException {
     System.out.println("without countryCallingNumber : " + phoneUtil.formatOutOfCountryCallingNumber(proto, "KR"));
     System.out.println("valid : " + phoneUtil.isValidNumber(proto));
 }
-{% endhightlight %}
+{% endhighlight %}
 
 >raw phone number : 010-2781-1234
 international : +82 10-2781-1234
